# AgentLearning

./: .gitignore  AGENTS.md  AGENTS.zh.md  README.md  笔记.md
ChatAgent/: glm_chat.py
ChatAgent/GlmChat/: README.md
ChatAgent/GlmChat/glm_chat/: api.py  personas.py
ChatAgent/GlmChat/glm_chat/cli/: main.py
ChatAgent/GlmChatWeb/: 1.txt  CHANGELOG.md  REDESIGN.md  WEREWOLF_DESIGN.md  app.py  auth.py  db.py  werewolf.py  werewolf_config.py  werewolf_prompts.py  werewolf_themes.py
ChatAgent/GlmChatWeb/templates/: index.html  login.html  register.html  werewolf.html
GlmChat/: pyproject.toml
GlmChat/glm_chat/: __init__.py  api.py
GlmChat/glm_chat/cli/: __init__.py  main.py
GlmChatWeb/: app.py
GlmChatWeb/templates/: index.html
part-SDD/: 01-SDD.md  02-SDD.md  AGENTS.md  CODING.md
part-SDD/specs/: AI_SDD_step.txt  coding-standards.md  project-vision.md
part-Study/: step.txt
part-Study/ai-knowledge-base/: AGENTS.md  memory_comparison.md
part-Study/ai-knowledge-base/utils/: github_api.py  github_api_new.py
part01/: 01-SDD.md  AGENTS_ClaudeCode.md  AGENTS_OpenCode.md  raw_apit_test.py
part01/specs/: AI_SDD_step.txt  project-vision - 副本.md  project-vision_Claude.md
