[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glm-chat"
version = "4.0.0"
description = "GLM 聊天机器人 — 支持人格切换、流式输出、多模型切换的终端 AI 聊天工具"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Your Name" },
]
keywords = ["glm", "chat", "cli", "ai", "zhipu"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Topic :: Communications :: Chat",
]

[project.scripts]
glm-chat = "glm_chat.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["glm_chat*"]
